# Compiler

./: .claudeignore  .dockerignore  .env  .env.example  .gitguardian.yaml  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .ruff.toml  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PRIVACY_POLICY.md  PR_Review_Report.md  README.md  SECURITY.md  STORE_LISTING.md  agents.md  benchmark.py  benchmark2.py  benchmark_json.py  benchmark_model_dump.py  benchmark_model_dump2.py  benchmark_rag.py  commit_desc.txt  commit_message.txt  connection_test.html  debug_boot.py  debug_rag_retry.py  demo_guide.md  extra_guardrails_test_prompts.md  fix_auth.py  fix_future.py  fix_indent.py  (+65 more)
.Jules/: palette.md
.agent/rules/: director.md
.agents/micro_sprint/: handoff.md  progress.md
.claude/: settings.json
.claude/agents/: compiler-architect.md  frontend-polisher.md  mcp-integrator.md  prompt-safety-reviewer.md
.cursor/skills/: promptc-cloud-agent-run-test.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml  clcd.yml  codeql.yml  deploy.yml  publish-vscode.yml  publish.yml  snyk.yml
.jules/: bolt.md  instructions.md  palette.md  sentinel.md
api/: auth.py  main.py  shared.py
api/routes/: agent_packs.py  compile.py  export.py  generators.py  meta.py  pr_safety.py  rag.py
app/: __init__.py  advanced_search.py  analytics.py  autofix.py  batch.py  collections.py  command_palette.py  compare.py  compile_export.py  compiler.py  context_presets.py  emitters.py  export_import.py  favorites.py  github_artifacts.py  github_repo_context.py  heuristics.py  history.py  ir_contract.py  models.py  models_v2.py  plugins.py  prompt_diff.py  quick_actions.py  quick_edit.py  quick_stats.py  report_generator.py  resources.py  search.py  search_history.py  settings_profiles.py  smart_tags.py  snippets.py  stats_dashboard.py  template_gallery.py  template_preview.py  templates.py  templates_manager.py  text_utils.py  token_optimizer.py  (+3 more)
app/_builtin_templates/: debugging-to-plan.yaml  documentation-writer.yaml  issue-to-brief.yaml  pr-to-review.yaml  research-to-safe-agent.yaml  spec-to-checklist.yaml
app/_schemas/: ir_v2.schema.json
app/adapters/: __init__.py  agent_ir.py  agent_packs.py  claude_code.py  claude_sdk.py  langchain.py  mcp_servers.py  skill_adapter.py  skill_ir.py
app/agents/: context_strategist.py
app/analyzer/: swarm_qa.py  test_scenarios.py
app/heuristics/: __init__.py  linter.py  logic_analyzer.py  security.py  utils.py
app/history/: __init__.py  manager.py  (+1 more)
cli/: __init__.py  main.py  render.py  utils.py
docs/: BRANCH_PROTECTION.md  DEMO_CHECKLIST_TR.md  DRAG_DROP_GUIDE.md  SIDEBAR_GUIDE.md  TAGS_SNIPPETS_GUIDE.md  clcd.md  cli.md  pattern-library.md  pr-integration-20260320-ledger.md  pr-safety-github-action.md  pr-safety.md  promptc-safe-workflows.md  release-checklist.md  why-promptc-is-an-intent-compiler.md
examples/: example_en.txt  example_recency_tr.txt  example_tr.txt  openai_pipe.py  opt_prompt.txt  opt_suite.yml
extension/: background.js  config.mjs  config.test.mjs  content.js  manifest.json  popup-preview.mjs  popup-preview.test.mjs  popup-ui.mjs  popup-ui.test.mjs  popup.css  popup.html  popup.js  preview-history.mjs  preview-history.test.mjs  styles.css
schema/: ir.schema.json  ir_v2.schema.json
scripts/: benchmark_offline_heuristics.py  branch_audit.ps1  check_clcd.py  check_syntax.py  clcd_check.py  create_api_key.py  create_key.py  debug_endpoint.py  debug_routes.py  debug_v2.py  demo.ps1  evaluate_heuristics.py  github_int_failure_fixer.py  test_benchmark_flow.py  test_hybrid_engine.py  test_logic_analyzer.py  verify_adversarial.py  verify_client_config.py  verify_strategies.py
templates/: bug-analyzer.yaml  code-review.yaml  documentation-writer.yaml  github-int-failure-fixer.yaml  tech-comparison.yaml  tutorial-creator.yaml
tests/: __init__.py  conftest.py  runtime_bootstrap.py  sample_plugin.py  test_adapters_string_escaping.py  test_advanced_search.py  test_adversarial.py  test_agent_council.py  test_agent_generator.py  test_agent_ir.py  test_agent_ir_inference.py  test_agent_ir_inference_gap.py  test_agent_packs_api.py  test_agent_packs_private_helpers.py  test_agent_packs_repo_aware.py  test_agent_packs_repo_plan.py  test_agent_packs_risk_mode.py  test_agent_packs_trust_gating.py  test_agent_packs_value.py  test_analytics.py  test_analyzer.py  test_api_hardening.py  test_auth_fast_path.py  test_autofix.py  test_batch_coverage.py  test_benchmark_api.py  test_benchmark_dow_protection.py  test_ci_workflow.py  test_claude_code_adapter_content.py  test_claude_code_mcp_and_workflow_helpers.py  test_claude_md_merge.py  test_claude_sdk_multi.py  test_cli_analytics_metadata.py  test_cli_compile_export.py  test_cli_console_refactor.py  test_cli_extras.py  test_cli_new_features.py  test_cli_optimize.py  test_cli_output_format.py  test_cli_pack.py  (+219 more)
web/: .env.example  README.md  config.test.mts  config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  promptc-api.test.mts  tsconfig.json  vitest.config.ts  vitest.contracts.config.ts
(+359 files in other folders)
