[project]
name = "promptc"
version = "2.0.45"
description = "Prompt Compiler App: compile free-text prompts into structured IR + prompts + plan"
authors = [ { name = "madara88645" } ]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
	"fastapi==0.135.2",
	"uvicorn==0.42.0",
	"pydantic==2.12.5",
	"typer==0.24.1",
	"click==8.3.1",
	"jsonschema==4.26.0",
	"rich==14.3.3",
	"textual==8.1.1",
	"pyyaml>=6.0",
	"ttkbootstrap>=1.10.1",
	"pillow>=10.3.0",
	"openai>=1.108.1",
	"python-dotenv>=1.2.1",
	"jinja2>=3.1.0",
	"tiktoken>=0.12.0",
	"cachetools>=7.0.0",
	"sqlalchemy>=2.0.47"
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "examples*", "promptc.egg-info*"]

[tool.setuptools.package-data]
app = [
	"_schemas/*.json",
	"_builtin_templates/*.yaml",
	"_builtin_templates/*.yml",
]

[project.scripts]
promptc = "cli.main:app"

[project.optional-dependencies]
dev = [
	"pytest==9.0.2",
	"pytest-cov>=5.0.0",
	"build>=1.2.0",
	"ruff==0.15.8",
	"pre-commit==4.5.1",
	"httpx<0.29",
]

openai = []

docs = [
	"pymupdf>=1.24.0",
	"python-docx>=1.1.0",
]

all = [
	"pymupdf>=1.24.0",
	"python-docx>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
	"auth_required: run the test without the global auth dependency override",
]
